# tarea6

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ics_vector.hpp  vector_exception.hpp
tests/public/: test_exception.cpp  test_iter.cpp  test_iterException.cpp  test_vectorAt.cpp  test_vectorBeginEnd.cpp  test_vectorClear.cpp  test_vectorEmpty.cpp  test_vectorEquality.cpp  test_vectorErase.cpp  test_vectorFrontBack.cpp  test_vectorGrowth.cpp  test_vectorPop.cpp  test_vectorPushBack.cpp  test_vectorResize.cpp  test_vectorSpecialMembers.cpp  test_vectorSubscript.cpp  test_vectorSwapElements.cpp  test_vector_foreach.cpp  test_vector_print.cpp
